deploy/external-dns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.14.0
          args:
            - --source=knative-serving
            - --source=knative-service
            - --domain-filters=maxcloud.dev
            - --provider=hetzner
            - --policy=sync
            - --registry=txt
            - --txt-owner-id=external-dns
