deploy/cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-manager
  template:
    metadata:
      labels:
        app: cert-manager
    spec:
      serviceAccountName: cert-manager
      containers:
        - name: cert-manager
          image: quay.io/jetstack/cert-manager-controller:v1.14.5
          args:
            - --v=2
            - --cluster-resource-namespace=cert-manager
---
apiVersion: v1
kind: Service
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  ports:
    - port: 9402
      targetPort: 9402
  selector:
    app: cert-manager
